--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "express-boom",
-  "version": "3.0.0",
+  "version": "3.0.0-fix",
   "description": "Boom response objects in Express",
   "main": "index.js",
   "scripts": {
